--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot Interface</title>
     <link rel="stylesheet" href="./styles.css">
-   
+   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
                     <div class="input-area">
                         <input class="input-field" placeholder="Hello! Type your query:" type="text" id="user-input">
-                        <button class="submit button" type="submit" onclick="sendMessage()">Send</button>
+                        <button class="submit button" type="submit" onclick="sendMessage()"><iconify-icon icon="ic:round-send"></iconify-icon></button>
                     </div>
             </div>
         </div>
