--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,12 @@
 
         <div class="header">
             <img class="logo-img" src="../images/brand-logo.jpg" alt="">
+            <div>
+
+          
             <p class="main-heading">Chatbot for Affordable Housing</p>
+            <p class="powered">Powered by HDFC Capital</p>
+              </div>
         </div>
 
         <div class="main">
