--- a/templates/styles.css
+++ b/templates/styles.css
@@ -31,13 +31,21 @@
     position: sticky;
     top: 0;
     z-index: 1000;
-    border-bottom: 2px solid rgb(202, 146, 146);
+    border-radius: 6px;
+    /* border-bottom: 1.2px solid rgb(148, 101, 48); */
+    box-shadow: 0px 0px 5px 0px rgb(148, 101, 48);
     
 }
 
 .main-heading{
     font-size: 30px;
     font-weight: 600;
+    color: rgb(91, 53, 9);
+}
+.powered{
+    margin-top: 6px;
+    font-size: 15px;
+     color: rgb(148, 101, 48);
 }
 
 .main{
@@ -82,15 +90,21 @@
     position: absolute;
     bottom: 0;
     z-index: 1000;
+    
 }
 
 .input-area input {
+    
     border-radius: 10px;
-    padding: 10px;
+    padding: 13px;
     flex-grow: 1;
     margin-right: 30px;
     margin: 20px 0;
+    border: 1.4px solid rgb(148, 101, 48);
+    outline: none !important;
+
 }
+
 
 .input-area button {
     margin-left: 1em;
@@ -102,7 +116,7 @@
      height: 2em;
    border: none !important;
      border: none;
-    background-color:#f8888e  !important;
+    background-color:rgb(91, 53, 9)  !important;
     color: white;
     border-radius: 50%;
     /* padding: 10px 10px 10px 14px; */
@@ -112,7 +126,7 @@
 .message{
     /* border: 1px solid blue; */
     padding: 20px;
-    background-color: rgba(252, 233, 234, 0.5);
+    background-color: rgba(148, 101, 48, 0.5);
     border-radius: 10px;
   
     /* margin-bottom: 10px; */
@@ -123,4 +137,9 @@
     padding: 20px;
   background-color: white;
     /* margin-bottom: 10px; */
+    
+}
+.user-message::before{
+    content:"⇱";
+    margin-right: 10px;
 }
