--- a/templates/styles.css
+++ b/templates/styles.css
@@ -33,19 +33,19 @@
     z-index: 1000;
     border-radius: 6px;
     /* border-bottom: 1.2px solid rgb(148, 101, 48); */
-    box-shadow: 0px 0px 5px 0px rgb(148, 101, 48);
+    box-shadow: 0px 0px 5px 0px rgb(97, 66, 30);
     
 }
 
 .main-heading{
     font-size: 30px;
     font-weight: 600;
-    color: rgb(91, 53, 9);
+    /* color: #fa959a ; */
 }
 .powered{
     margin-top: 6px;
     font-size: 15px;
-     color: rgb(148, 101, 48);
+     /* color: #fa959a ; */
 }
 
 .main{
@@ -100,8 +100,8 @@
     flex-grow: 1;
     margin-right: 30px;
     margin: 20px 0;
-    border: 1.4px solid rgb(148, 101, 48);
-    outline: none !important;
+    /* border: 1.4px solid #fa959a ; */
+    /* outline: none !important; */
 
 }
 
@@ -116,7 +116,7 @@
      height: 2em;
    border: none !important;
      border: none;
-    background-color:rgb(91, 53, 9)  !important;
+    background-color:#fa959a  !important;
     color: white;
     border-radius: 50%;
     /* padding: 10px 10px 10px 14px; */
@@ -126,7 +126,7 @@
 .message{
     /* border: 1px solid blue; */
     padding: 20px;
-    background-color: rgba(148, 101, 48, 0.5);
+    background-color: rgba(252, 233, 234, 0.5);
     border-radius: 10px;
   
     /* margin-bottom: 10px; */
@@ -137,7 +137,6 @@
     padding: 20px;
   background-color: white;
     /* margin-bottom: 10px; */
-    
 }
 .user-message::before{
     content:"⇱";
